...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Quantity" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oqc-dZ-dD4">
                                <rect key="frame" x="15" y="150" width="345" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Quantity"/>
...
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Price" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I6Y-QC-PPm">
                                <rect key="frame" x="15" y="200" width="345" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Price"/>
...
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Label" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vog-1O-k8x">
                                <rect key="frame" x="15" y="100" width="345" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="Label">
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="State Code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jkY-bb-c26">
                                <rect key="frame" x="15" y="250" width="345" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="State"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="152.5" y="320" width="70" height="32"/>
                                <color key="backgroundColor" red="0.0" green="0.58980089430000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Order"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="32" id="ONy-im-M4a"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="71K-CS-GHy">
                                        <rect key="frame" x="8" y="66" width="79" height="13"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Label1"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="79" id="JQw-q9-NqM"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="akl-zg-CaP">
                                        <rect key="frame" x="107" y="66" width="58" height="13"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Quantity1"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="9Gv-Pp-9Gr"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCd-Aq-PHm">
                                        <rect key="frame" x="179" y="66" width="69" height="13"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Unit1"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="69" id="Nud-wg-s7N"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kI4-N3-WhJ">
                                        <rect key="frame" x="256" y="66" width="65" height="13"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Total1"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="65" id="HVv-nm-z5K"/>
...
                                        <rect key="frame" x="132.5" y="377" width="70" height="32"/>
                                        <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Close"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="M2J-TW-5mp"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xpj-kg-u1x">
                                        <rect key="frame" x="265" y="155" width="30" height="14"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TWT"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="zxO-Vj-tcy"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JqD-XS-okB">
                                        <rect key="frame" x="265" y="170" width="30" height="14"/>
